iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT

-A INPUT -m state --state NEW -m tcp -p tcp --dport 27017 -j DROP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 28017 -j DROP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 4369 -j DROP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 5984 -j DROP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 13657 -j DROP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 40322 -j DROP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 40874 -j DROP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 41506 -j DROP
-A INPUT -m state --state NEW -m tcp -p tcp --dport 59784 -j DROP

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
